--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
-base.uri = https://www.clips4sale.com/
+base.uri = https://www.clips4sale.com
 implicitly.wait = 10
 email = airdropsandtests@gmail.com
 password = Poiuytrewq@1029
