--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,10 @@
       <artifactId>selenium-java</artifactId>
       <version>4.8.1</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-junit4 -->
+    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
     <dependency>
       <groupId>io.qameta.allure</groupId>
-      <artifactId>allure-junit4</artifactId>
+      <artifactId>allure-testng</artifactId>
       <version>2.21.0</version>
     </dependency>
   </dependencies>
@@ -49,6 +49,11 @@
           <source>8</source>
           <target>8</target>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-maven</artifactId>
+        <version>2.10.0</version>
       </plugin>
     </plugins>
   </build>
